<resources>
    <string name="app_name">AndroidDev2025</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="play">Play</string>
    <string name="block_image">Block image</string>

    <string name="avatar">Avatar</string>
    <string name="balance">Balance</string>
    <string name="price_placeholder">Cost</string>

    <string name="join">Join</string>
    <string name="type_label">Type:</string>
    <string name="host_label">Host:</string>
    <string name="balance_label">Balance:</string>

    <string name="nav_single">Single</string>
    <string name="nav_multiple">Multiple</string>
    <string name="nav_settings">Settings</string>
</resources>